# ebook-to-mindmap

./: .gitignore  .prettierignore  .prettierrc.mjs  Dockerfile  PDF处理流程文档.md  README.en.md  README.md  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agent/skills/streaming-mindmap-rendering/: SKILL.md
.claude/: settings.local.json
docs/: EPUB结构说明.md  PDF处理流程文档.md  architecture-aiservice-vs-bookprocessing.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DownloadMindMapButton.tsx  EpubReader.tsx  Footer.tsx  LanguageSwitcher.tsx  MarkdownCard.tsx  MermaidDiagram.tsx  MindElixirStarModal.tsx  MindMapCard.tsx  PdfReader.tsx  ReasoningDisplay.tsx  Step1Config.tsx  Step2Results.tsx  TagDialog.tsx  ThemeToggle.tsx  ViewContentDialog.tsx
src/components/layout/: Sidebar.tsx  UserMenu.tsx
src/contexts/: ThemeContext.tsx
src/i18n/: index.ts
src/lib/: connect.ts  llmClient.ts
src/pages/: CacheManagementPage.tsx  CallbackPage.tsx  ChatPage.tsx  CustomPromptsPage.tsx  ModelsPage.tsx  SettingsPage.tsx  SummaryPage.tsx
src/services/: aiService.ts  api.ts  authService.ts  bookProcessingService.ts  cacheService.ts  constants.ts  epubProcessor.ts  geminiService.ts  ollamaService.ts  pdfProcessor.ts  ragService.ts  unifiedAIService.ts
src/stores/: authStore.ts  chatConfigStore.ts  configStore.ts  customPromptStore.ts  modelStore.ts
src/types/: ai.ts
src/utils/: htmlToMarkdown.ts  uiHelpers.ts
(+15 files in other folders)
