[package]
name = "ebook-to-mindmap"
version = "0.1.0"
description = "AI-powered ebook to mind map converter"
authors = ["Mind Elixir"]
license = "MIT"
repository = "https://github.com/SSShooter/ebook-to-mindmap"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ebook_to_mindmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-http = "2.5.9"
tauri-plugin-log = "2"
